--- a/CPJ_floodinsurance.Rmd
+++ b/CPJ_floodinsurance.Rmd
@@ -77,7 +77,7 @@ The [NFIP claims data](https://www.fema.gov/openfema-data-page/fima-nfip-redacte
 
 Finally, I also use the [national flood hazard layer](https://www.fema.gov/flood-maps/national-flood-hazard-layer) geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data.
 
-```{r first-stage-graph, echo=FALSE, fig.cap="Flood insurance adoption, driven by Biggert-Waters and HFIAA, separately for adapted and non-adapted homes. The key source of variation in my first stage.", fig.dim=c(5,3.5)}
+```{r first-stage-graph, echo=FALSE, fig.cap="Flood insurance adoption, driven by Biggert-Waters, separately for adapted and non-adapted homes. The key source of variation in my first stage.", fig.dim=c(5,3.5)}
 firststage <- nctrans_panel[full_sample == TRUE, .(polfrac = sum(policy_prob) / .N), keyby = .(year, adapted_text)]
 ggplot(firststage, aes(x=year, y=polfrac)) + geom_point(aes(color = adapted_text, shape=adapted_text)) + geom_vline(xintercept=2012.5) + ggtitle("Flood Insurance Adoption Over Time") + ylab("Fraction of Homes with Flood Insurance") + geom_text(aes(x=2012.35, label="Biggert Waters Act", y=.03), angle=90) + labs(shape="Adaptation Status", color="Adaptation Status")
 ```
@@ -119,21 +119,22 @@ kable(sumstats, digits = 4, caption = "Summary statistics of the analysis panel.
 To inspect the variation of home sales relative to flood events, I run a reduced form regression of transaction probability by years since (or before, for the one year lead) a flood event, controlling for adapted status. The results of this reduced form regression are shown in Table \@ref(tab:reduced-form), and indicate at least some responsiveness to flooding. Potentially concerningly, adapted homes appear to be slightly less likely to be sold when a flood event occurs in the _subsequent_ year, a coefficient one would expect to be 0. This result may point to some unexplained variation in transaction probability driven by trends from observation year or year of home construction that are not captured by the fixed effects. 
 
 ```{r transprob-byflood, echo=FALSE, warning=FALSE, results='asis'}
-transprob_flood_es <- felm(transaction_prob ~ adapted*flood_event + adapted*flood_L1 + adapted*flood_L2
+transprob_flood_es <- felm(transaction_obs ~ adapted*flood_event + adapted*flood_L1 + adapted*flood_L2
                         + adapted*flood_L3 + adapted*flood_F1 | panel_id + year + YearBuilt | 0 | censusTract,
-                        data = tzy_panel[es_sample_3L == TRUE])
-summary(transprob_flood_es)
-transprob_flood_dd <- felm(sale_2years ~ flood_event*adapted | panel_id + year + YearBuilt | 0 | censusTract,
+                        data = nctrans_panel[es_sample_3L == TRUE], exactDOF = TRUE)
+# summary(transprob_flood_es)
+transprob_flood_dd <- felm(sale_2years ~ adapted*flood_event | panel_id + year + YearBuilt | 0 | censusTract,
                         data = nctrans_panel[dd_sample == TRUE], exactDOF = TRUE)
-summary(transprob_flood_dd)
+# summary(transprob_flood_dd)
 
-stargazer(transprob_flood, type=ifelse(knitr::is_latex_output(), "latex", ifelse(knitr::is_html_output(),"html" , "text")), 
+stargazer(transprob_flood_dd, transprob_flood_es, type=ifelse(knitr::is_latex_output(), "latex", ifelse(knitr::is_html_output(),"html" , "text")), 
           covariate.labels = c("adaptation req.", "flood (concurrent)", "flood (1 year ago)", "flood (2 years ago)",
                                "flood (3 years ago)", "flood (next year)", "flood x adaptation (concurrent)",
                     "flood x adaptation (1 year ago)", "flood x adaptation (2 years ago)",
-                    "flood x adaptation (3 years ago)", "flood x adaptation (next year)"), 
+                    "flood x adaptation (3 years ago)", "flood x adaptation (next year)"),
           title="Reduced Form: Home Sale Probability Against Flood Events and Adaptation", 
-          dep.var.caption = "Probability of Home Sale", dep.var.labels.include = FALSE, 
+          dep.var.caption = "Probability of Home Sale…", dep.var.labels.include = FALSE, 
+          column.labels = c("Within the next two years", "This year"),
           df=FALSE, digits = 4, header = FALSE, keep.stat = c("n", "rsq"), label="tab:reduced-form",
           notes.label = "\\parbox[t]{0.3\\textwidth}{Fixed effects: census tract x flood zone, observation year, and home construction year.}",
           notes.align = "l", no.space = TRUE, single.row = TRUE, font.size = "small")
@@ -148,67 +149,31 @@ The unit of analysis is a set of homes in a particular census tract and flood zo
 Because the choice to purchase flood insurance is endogenous, I instrument for insurance takeup using two exogenous policy shocks that changed flood insurance rate schedules. The Biggert Waters Flood Insurance Reform Act of 2012 and the Homeowner Flood Insurance Affordability Act of 2014 made several changes to NFIP rate schedules starting in 2013 and 2015, respectively. Some of the rate changes applied to all insured homes, while others applied differently to adapted and non-adapted homes. Homes built or substantially renovated after the adoption of the first FIRM panel covering the property are required to be adapted in their design to reduce the risk of flood damage, primarily through elevation of the lowest occupied level of the home. These policy changes will provide exogenous policy variation to identify the effect of holding flood insurance. The adapted status is defined by the year of home construction relative to the year of FIRM adoption. 
 
 ```{r first-stage-policy, include=FALSE}
-FS_policy_prob <- felm(policy_prob ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
-                                + flood_L2*(reg_reform_L2:adapted) 
-                                + flood_F1*(reg_reform_F1:adapted) + adapted | panel_id + year + YearBuilt
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
+FS_policy_prob <- felm(policy_prob ~ flood_event*(reg_reform:adapted) + adapted | panel_id + year + YearBuilt
+                             | 0 | censusTract, data = nctrans_panel[dd_sample == TRUE], exactDOF = TRUE)
 # summary(FS_policy_prob)
 ```
 
-```{r first-stage-policy-L1, include=FALSE}
-FS_policy_prob_L1 <- felm(policy_prob_L1 ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
-                                + flood_L2*(reg_reform_L2:adapted) 
-                                + flood_F1*(reg_reform_F1:adapted) + adapted | panel_id + year + YearBuilt
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
-# summary(FS_policy_prob_L1)
-```
-
-```{r first-stage-policy-L2, include=FALSE}
-FS_policy_prob_L2 <- felm(policy_prob_L2 ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
-                                + flood_L2*(reg_reform_L2:adapted) 
-                                + flood_F1*(reg_reform_F1:adapted) + adapted | panel_id + year + YearBuilt
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
-# summary(FS_policy_prob_L2)
-```
-
-```{r first-stage-policy-F1, include=FALSE}
-FS_policy_prob_F1 <- felm(policy_prob_F1 ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
-                                + flood_L2*(reg_reform_L2:adapted) 
-                                + flood_F1*(reg_reform_F1:adapted) + adapted | panel_id + year + YearBuilt
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
-# summary(FS_policy_prob_F1)
-```
-
 ```{r first-stage-flpl, include=FALSE}
-FS_policy_fld_prob <- felm(flooded_insured ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
-                                + flood_L2*(reg_reform_L2:adapted) 
-                                + flood_F1*(reg_reform_F1:adapted) + adapted | panel_id + year + YearBuilt
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
+FS_policy_fld_prob <- felm(flooded_insured ~ flood_event*(reg_reform:adapted) + adapted | panel_id + year + YearBuilt
+                             | 0 | censusTract, data = nctrans_panel[dd_sample == TRUE], exactDOF = TRUE)
 # summary(FS_policy_fld_prob)
 ```
 
-```{r first-stage-flpl-L1, include=FALSE}
-FS_policy_fld_L1 <- felm(flooded_insured_L1 ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
-                                + flood_L2*(reg_reform_L2:adapted) 
-                                + flood_F1*(reg_reform_F1:adapted) + adapted | panel_id + year + YearBuilt
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
-# summary(FS_policy_fld_L1)
+```{r first-stage-policy-lags, include=FALSE}
+FS_policy_prob_lags <- felm(policy_prob ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
+                                + flood_L2*(reg_reform_L2:adapted) + flood_F1*(reg_reform_F1:adapted)
+                                + adapted | panel_id + year + YearBuilt
+                             | 0 | censusTract, data = nctrans_panel[es_sample_2L == TRUE])
+# summary(FS_policy_prob_lags)
 ```
 
-```{r first-stage-flpl-L2, include=FALSE}
-FS_policy_fld_L2 <- felm(flooded_insured_L2 ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
+```{r first-stage-flpl-lags, include=FALSE}
+FS_policy_fld_prob_lags <- felm(flooded_insured ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
                                 + flood_L2*(reg_reform_L2:adapted) 
                                 + flood_F1*(reg_reform_F1:adapted) + adapted | panel_id + year + YearBuilt
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
-# summary(FS_policy_fld_L2)
-```
-
-```{r first-stage-flpl-F1, include=FALSE}
-FS_policy_fld_F1 <- felm(flooded_insured_F1 ~ flood_event*(reg_reform:adapted) + flood_L1*(reg_reform_L1:adapted) 
-                                + flood_L2*(reg_reform_L2:adapted) 
-                                + flood_F1*(reg_reform_F1:adapted) + adapted | panel_id + year + YearBuilt
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
-# summary(FS_policy_fld_F1)
+                             | 0 | censusTract, data = nctrans_panel[es_sample_2L == TRUE])
+# summary(FS_policy_fld_prob_lags)
 ```
 
 ```{r First-stage-output, echo=FALSE, warning=FALSE, echo=FALSE, results='asis'}
@@ -220,15 +185,13 @@ first_stage_covars <- c("flood (concurrent)", "flood (1 year ago)", "flood (2 ye
                     "flood x adapted x year > 2012 (2 years ago)",
                     "flood x adapted x year > 2012 (next year)")
 first_stage_deps <- c("concurrent", "1 year ago", "2 years ago", "next year")
-stargazer(FS_policy_prob, FS_policy_prob_L1, FS_policy_prob_L2, FS_policy_prob_F1,
-          FS_policy_fld_prob, FS_policy_fld_L1, FS_policy_fld_L2, FS_policy_fld_F1,
+stargazer(FS_policy_prob, FS_policy_fld_prob, FS_policy_prob_lags, FS_policy_fld_prob_lags,
           type=ifelse(knitr::is_latex_output(), "latex", ifelse(knitr::is_html_output(),"html" , "text")), 
-          covariate.labels = first_stage_covars, 
-          title="First Stage Regressions: Instrumenting for Insurance Takeup", 
-          dep.var.caption = "Probability of Insurance Takeup", column.labels = c("Hold Insurance", "Hold Insurance x Flood"),
-          column.separate = c(4,4), dep.var.labels = rep(first_stage_deps, 2), report="vc*",
-          column.sep.width = "1pt", df=FALSE, digits = 4, header = FALSE, keep.stat = "rsq", label="tab:first-stage-output",
-          notes = "\\parbox[t]{0.5\\textwidth}{All regressions include fixed effects for census tract x flood zone, observation year, and construction year, and standard errors are clustered at the census tract. Calculated using the larger two-lag sample}", font.size = "small")
+          covariate.labels = first_stage_covars, no.space = TRUE, column.labels = c("Difference-in-Difference", "Event Study"),
+          title="First Stage: Instrumenting for Insurance Takeup", font.size = "small", notes.align = "l", column.separate = c(2,2),
+          dep.var.caption = "Probability of Insurance Takeup", dep.var.labels = rep(c("Hold Insurance", "Hold Insurance x Flood"), 2),
+          df=FALSE, digits = 4, header = FALSE, keep.stat = c("n", "rsq"), label="tab:first-stage-output",
+          notes = "\\parbox[t]{0.3\\textwidth}{Fixed effects: census tract x flood zone, observation year, and home construction year. Clustering: census tract.}")
 ```
 
 This econometric approach requires two identification assumptions: first, the probability of a home experiencing flooding is exogenous, conditional on census tract, flood zone, and adaptation status. Second, any time trends in transaction probability must be common to adapted and non-adapted homes. Without common time trends, none of the variation in prices from the policy changes will be exogenous, even the differential variation between adapted and non-adapted homes, violating the exclusion restriction. 
@@ -239,26 +202,33 @@ This econometric approach requires two identification assumptions: first, the pr
 
 ```{r OLS-2-noF, include=FALSE}
 # Two Lags, no Leads
-OLS_transprob_reg_2 <- felm(transaction_prob ~ flood_event*policy_prob + flood_L1*policy_prob_L1 
+OLS_transprob_reg_2 <- felm(transaction_obs ~ flood_event*policy_prob + flood_L1*policy_prob_L1 
                         + flood_L2*policy_prob_L2 | panel_id + year + YearBuilt + adapted
-                        | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
-summary(OLS_transprob_reg_2)
+                        | 0 | censusTract, data = nctrans_panel[es_sample_2L == TRUE])
+# summary(OLS_transprob_reg_2)
 ```
 
 ```{r OLS-3-noF, include=FALSE}
 # Three Lags, No Leads
-OLS_transprob_reg_3 <- felm(transaction_prob ~ flood_event*policy_prob + flood_L1*policy_prob_L1 
+OLS_transprob_reg_3 <- felm(transaction_obs ~ flood_event*policy_prob + flood_L1*policy_prob_L1 
                         + flood_L2*policy_prob_L2 + flood_L3*policy_prob_L3 | panel_id + year + YearBuilt + adapted
-                        | 0 | censusTract, data = tzy_panel[sample_3L == TRUE])
+                        | 0 | censusTract, data = nctrans_panel[es_sample_3L == TRUE])
 # summary(OLS_transprob_reg_3)
 ```
 
 ```{r OLS-2-F, include=FALSE}
 # Two Lags, One Lead
-OLS_transprob_reg_2_lead <- felm(transaction_prob ~ flood_event*policy_prob + flood_L1*policy_prob_L1 
+OLS_transprob_reg_2_lead <- felm(transaction_obs ~ flood_event*policy_prob + flood_L1*policy_prob_L1 
                         + flood_L2*policy_prob_L2 + flood_F1*policy_prob_F1 | panel_id + year + YearBuilt + adapted
-                             | 0 | censusTract, data = tzy_panel[sample_2L == TRUE])
+                             | 0 | censusTract, data = nctrans_panel[es_sample_2L == TRUE])
 # summary(OLS_transprob_reg_2_lead)
+```
+
+```{r OLS-DD, include=FALSE}
+# diff-in-diff
+OLS_transprob_dd <- felm(sale_2years ~ flood_event*policy_prob | panel_id + year + YearBuilt + adapted
+                             | 0 | censusTract, data = nctrans_panel[dd_sample == TRUE])
+# summary(OLS_transprob_dd)
 ```
 
 I first consider the results of our models without instrumenting for insurance takeup. To explore any time delays in the effect of flood events and insurance, I run four regressions, varying the number of lag years between two and three (which changes the available sample size of the model) and whether I include a one year lead variable (which has no impact on the sample). Table \@ref(tab:OLS-output) shows the regression outputs for these uninstrumented models. The lags are indexed from the perspective of the year of the potential sale. For example, the _flood (2 years ago)_ variable considers whether homes are more likely to be sold if they had flooded two years prior, or perhaps more naturally, whether homes are more likely to be sold two years after a flood.
@@ -273,11 +243,12 @@ covariate_labs <- c("flood (concurrent)", "flood (1 year ago)", "flood (2 years 
                     "insurance (3 years ago)","insurance (next year)", "flood x insurance (concurrent)",
                     "flood x insurance (1 year ago)", "flood x insurance (2 years ago)",
                     "flood x insurance (3 years ago)", "flood x insurance (next year)")
-stargazer(OLS_transprob_reg_2, OLS_transprob_reg_3, OLS_transprob_reg_2_lead, 
+stargazer(OLS_transprob_dd, OLS_transprob_reg_2, OLS_transprob_reg_3, OLS_transprob_reg_2_lead, 
           type=ifelse(knitr::is_latex_output(), "latex", ifelse(knitr::is_html_output(),"html" , "text")),
           covariate.labels = covariate_labs, order = c(1,3,5,7,9,2,4,6,8,10,11:15), 
           title="Home Sale Probability Against Flood Events and Insurance, OLS", 
-          dep.var.caption = "Probability of Home Sale", dep.var.labels.include = FALSE, label="tab:OLS-output",
+          dep.var.caption = "Probability of Home Sale…", column.labels = c("Within the next two years", "This year"),
+          dep.var.labels.include = FALSE, label="tab:OLS-output", column.separate = c(1,3),
           column.sep.width = "2pt", df=FALSE, digits = 4, header = FALSE, keep.stat = c("n", "rsq"),
           notes = "\\parbox[t]{0.5\\textwidth}{All regressions include fixed effects for census tract x flood zone, observation year, construction year, and adaptation status. Standard errors are clustered by census tract.}", font.size = "small")
 ```
@@ -286,37 +257,45 @@ stargazer(OLS_transprob_reg_2, OLS_transprob_reg_3, OLS_transprob_reg_2_lead,
 
 ```{r IV-2-noF, include=FALSE}
 # Two Lags, no Leads
-transprob_reg_2 <- felm(transaction_prob ~ flood_event + flood_L1 + flood_L2 | panel_id + year + YearBuilt + adapted
+transprob_reg_2 <- felm(transaction_obs ~ flood_event + flood_L1 + flood_L2 | panel_id + year + YearBuilt + adapted
                         | (policy_prob | policy_prob_L1 | policy_prob_L2 | flooded_insured 
                            | flooded_insured_L1 | flooded_insured_L2 
                            ~ flood_event:reg_reform:adapted + reg_reform:adapted + flood_L1:reg_reform_L1:adapted
                            + reg_reform_L1:adapted + flood_L2:reg_reform_L2:adapted + reg_reform_L2:adapted) 
-                        | censusTract, data = tzy_panel[sample_2L == TRUE], exactDOF = TRUE)
-summary(transprob_reg_2)
+                        | censusTract, data = nctrans_panel[es_sample_2L == TRUE], exactDOF = TRUE)
+# summary(transprob_reg_2)
 ```
 
 ```{r IV-3-noF, include=FALSE}
 # Three Lags, No Leads
-transprob_reg_3 <- felm(transaction_prob ~ flood_event + flood_L1 + flood_L2 + flood_L3 | panel_id + year + YearBuilt + adapted
+transprob_reg_3 <- felm(transaction_obs ~ flood_event + flood_L1 + flood_L2 + flood_L3 | panel_id + year + YearBuilt + adapted
                         | (policy_prob | policy_prob_L1 | policy_prob_L2 | policy_prob_L3 
                            | flooded_insured | flooded_insured_L1 | flooded_insured_L2 | flooded_insured_L3 
                            ~ flood_event:reg_reform:adapted + reg_reform:adapted + flood_L1:reg_reform_L1:adapted
                            + reg_reform_L1:adapted + flood_L2:reg_reform_L2:adapted + reg_reform_L2:adapted 
                            + flood_L3:reg_reform_L3:adapted + reg_reform_L3:adapted) 
-                        | censusTract, data = tzy_panel[sample_3L == TRUE], exactDOF = TRUE)
+                        | censusTract, data = nctrans_panel[es_sample_3L == TRUE], exactDOF = TRUE)
 # summary(transprob_reg_3)
 ```
 
 ```{r IV-2-F, include=FALSE}
 # Two Lags, One Lead
-transprob_reg_2_lead <- felm(transaction_prob ~ flood_event + flood_L1 + flood_L2 + flood_F1 | panel_id + year + YearBuilt + adapted
+transprob_reg_2_lead <- felm(transaction_obs ~ flood_event + flood_L1 + flood_L2 + flood_F1 | panel_id + year + YearBuilt + adapted
                              | (policy_prob | policy_prob_L1 | policy_prob_L2 | policy_prob_F1 
                                 | flooded_insured | flooded_insured_L1 | flooded_insured_L2 | flooded_insured_F1
                                 ~ flood_event:reg_reform:adapted + reg_reform:adapted + flood_L1:reg_reform_L1:adapted
                                 + reg_reform_L1:adapted + flood_L2:reg_reform_L2:adapted + reg_reform_L2:adapted
                                 + flood_F1:reg_reform_F1:adapted + reg_reform_F1:adapted) 
-                             | censusTract, data = tzy_panel[sample_2L == TRUE], exactDOF = TRUE)
+                             | censusTract, data = nctrans_panel[es_sample_2L == TRUE], exactDOF = TRUE)
 summary(transprob_reg_2_lead)
+```
+
+```{r IV-DD, include=FALSE}
+# Diff in Diff
+transprob_reg_dd <- felm(sale_2years ~ flood_event | panel_id + year + YearBuilt + adapted
+                             | (policy_prob | flooded_insured ~ flood_event:reg_reform:adapted + reg_reform:adapted) 
+                             | censusTract, data = nctrans_panel[dd_sample == TRUE], exactDOF = TRUE)
+summary(transprob_reg_dd)
 ```
 
 To disambiguate these effects, I instrument for insurance takeup, with Biggert-Waters and HFIAA providing exogenous variation in flood insurance premiums. Table \@ref(tab:IV-output) shows the regression results when I instrument for insurance takeup. I now find significant effects showing homes that experience flooding while holding insurance are less likely to be sold one or two years later. While the effect for a single year lag is consistent, the two year lag effect is washed out when a third year lag term is included. In addition, the main effects for holding insurance remain strong (concurrent effects and the longer lags, though the one year lag shows no effect) and maintain their signs from the uninstrumented regressions. 
@@ -324,11 +303,11 @@ To disambiguate these effects, I instrument for insurance takeup, with Biggert-W
 However, the effect sizes for the insurance main effects are now improbably large. These effect sizes suggest that my chosen identification strategy has not been successful. Some combination of multicollinearity between the adaptation instrument and the year fixed effects, and insufficient variation from the instrument is likely leading to a violation of the exclusion restriction, resulting in biased, invalid estimates. Further exploration and model modification may allow me to develop more credible estimates of these effects.
 
 ```{r IV-output, echo=FALSE, warning=FALSE, echo=FALSE, results='asis'}
-stargazer(transprob_reg_2, transprob_reg_3, transprob_reg_2_lead, 
+stargazer(transprob_reg_dd, transprob_reg_2, transprob_reg_3, transprob_reg_2_lead, 
           type=ifelse(knitr::is_latex_output(), "latex", ifelse(knitr::is_html_output(),"html" , "text")), 
-          covariate.labels = covariate_labs, 
+          covariate.labels = covariate_labs, column.separate = c(1,3), dep.var.labels.include = FALSE,
           title="Home Sale Probability Against Flood Events and Insurance, Instrumenting for Insurance", 
-          dep.var.caption = "Probability of Home Sale", dep.var.labels.include = FALSE, 
+          dep.var.caption = "Probability of Home Sale…", column.labels = c("Within the next two years", "This year"), 
           column.sep.width = "2pt", df=FALSE, digits = 4, header = FALSE, keep.stat = "n", label="tab:IV-output",
           notes = "\\parbox[t]{0.5\\textwidth}{All regressions include fixed effects for census tract x flood zone, observation year, construction year, and adaptation status. Standard errors are clustered by census tract.}", font.size = "small")
 ```
