Describe buyouts, Zivin paper, year matching issue, flood zones, NC ext validity

--- a/CPJ_floodinsurance.Rmd
+++ b/CPJ_floodinsurance.Rmd
@@ -57,7 +57,7 @@ Flood damage prevention and recovery has been a major expenditure for every leve
 
 The most severe examples of this problem are so called severe repetitive loss (SRL) properties [@NationalFloodInsuranceProgram2020]. These structures, usually older homes not adapted by elevation to withstand regular flood damage, are insured by the National Flood Insurance Program (NFIP), and have received repeated claim payouts that exceed the value of the home, a situation that is only possible because the NFIP sets premiums below actuarially fair levels. A private insurer faced with this situation would either refuse to cover the property, or upon the filing of a claim, declare the property a total loss, much as car insurers will "total" a car following a particularly damaging crash. However, the NFIP is required by statute to provide  The NFIP was originally established by Congress to shift some of the cost and risk of development in flood prone areas from the government onto property owners. However, these pricing practices have left the NFIP with a substantial debt load, and a deficit that currently exceeds $1 billion per year [@CBO2017]. The ongoing fiscal problems of the NFIP along with its conflicting mandates of moving risk from the government to homeowners and maintaining affordability has been a topic of research and discussion for more than a decade [@Miller2019; @NationalAcademiesofSciencesandMedicine2016]. 
 
-Congress has made several attempts to reduce the working deficit of the NFIP, and any such plan will need to address SRL properties. It would be welfare improving to simply buy these properties and tear them down. Doing so would avoid the substantial insurance losses and be a net gain to society, without even having to consider the additional avoided costs for infrastructure, US Army Corps of Engineers management projects, etc. The Federal Emergency Management Agency (FEMA) has pursued buyouts of SRL properties in recent years, but these proceedings are slow, costly, and politically unpopular [@Weber2019; @Salvesen2018]. To address this problem on a broad scale, policymakers will need to think carefully about how homeowners choose whether to rebuild or relocate in the wake of a disaster.
+Congress has made several attempts to reduce the working deficit of the NFIP, and any such plan will need to address SRL properties. It would be welfare improving to simply buy these properties and tear them down. Doing so would avoid the substantial insurance losses and be a net gain to society, without even having to consider the additional avoided costs for infrastructure, US Army Corps of Engineers management projects, etc. The Federal Emergency Management Agency (FEMA) has pursued buyouts of SRL properties in recent years, but these proceedings are slow, costly, and politically unpopular [@Weber2019; @Salvesen2018]. Consumers are, understandably, attached to their homes and communities, and being asked (let alone required) to move is, at a minimum, quite disruptive. This policy direction stands in stark contrast to decades of pro-development policies, including billions of federal and state dollars, along the Atlantic and Gulf Coasts, so turning the tide of public opinion will be no easy task [@Gaul2019]. To address this problem on a broad scale, policymakers will need to think carefully about how homeowners choose whether to rebuild or relocate in the wake of a disaster.
 
 This paper attempts to provide evidence to support that policymaking process by exploring how holding flood insurance impacts a homeowner's decision to sell their home in the wake of a flood. By identifying property owners who are most likely to sell their homes following a flood, the government can design a policy to purchase those homes themselves, rather than a new private buyer, and then permanently remove the home from the market. Because FEMA already has an existing relationship with flood insurance policyholders, this group of flood-susceptible residents could represent an easy first group of homeowners to approach for buyouts, particularly in the wake of a flood. However, if holding flood insurance makes homeowners _less_ likely to sell their homes following a flood, then that population is not as useful when FEMA is in search of potential buyout offerings. Thus, this paper attempts to determine whether holding flood insurance impacts a homeowner's decision to sell their home in the wake of a flood.
 
@@ -65,11 +65,11 @@ To answer this question, I combine several detailed micro datasets: real estate 
 
 Because the choice of insurance takeup is endogenous, I instrument for insurance using exogenous price variation caused by the Biggert Waters Flood Insurance Reform Act of 2012. This approach leads to estimates of questionable validity due to potential collinearity between the instrument and year fixed effects, but they suggest that homeowners who hold flood insurance may be less likely to sell their homes following a flood. If refined and confirmed, these results would suggest, perhaps unsurprisingly, that the current structure of NFIP policies provide a particularly acute incentive to remain in flood zones following a flood event, and policymakers will need to think holistically about these incentives when designing a buyout program. 
 
-This paper contributes to a growing literature on consumer responses to natural disasters, particularly floods, and the welfare and policy implications of existing flood insurance rate structures. @Gallagher2014 shows that insurance takeup is not perfectly rational, and in fact depends on salience of flood risk. @Wagner2019 tests for selection in the flood insurance market, and describes how risk misperception and other frictions in insurance takeup distort demand, and thus lead to different welfare effects of reforms than a standard expected utility framework would suggest. @Peralta2019 explore the location sorting effects of subsidized flood insurance. This paper most closely builds on the work of @Zivin2020, who test directly for the impact of hurricanes on housing markets. The authors look for impacts on housing prices and transaction probability of hurricane-force winds, and also explore the subsequent demographic changes of the new home buyers. This research follows the methodology of @Zivin2020, but uses flood events rather than wind exposure, and is not limited to high-damage events like hurricanes. 
+This paper contributes to a growing literature on consumer responses to natural disasters, particularly floods, and the welfare and policy implications of existing flood insurance rate structures. @Gallagher2014 shows that insurance takeup is not perfectly rational, and in fact depends on salience of flood risk. @Wagner2019 tests for selection in the flood insurance market, and describes how risk misperception and other frictions in insurance takeup distort demand, and thus lead to different welfare effects of reforms than a standard expected utility framework would suggest. @Peralta2019 explore the location sorting effects of subsidized flood insurance. This paper most closely builds on the work of @Zivin2020, who test directly for the impact of hurricanes on housing markets. The authors look for impacts on housing prices and transaction probability of hurricane-force winds, finding an increase in prices and a small decrease in sale probability up to three years following a hurricane, and also find that incoming homebuyers after a hurricane are higher income than those they replace. This research follows the methodology of @Zivin2020, but uses flood events rather than wind exposure, and is not limited to high-damage events like hurricanes. 
 
 # Data
 
-This research is built upon two primary data sources: flood insurance policies, claims and flood zones from the National Flood Insurance Program, and real estate assessment and transaction records from the Zillow ZTRAX dataset [@ZillowGroup2020]. I focus on North Carolina, which is one of the primary states covered by NFIP policies and receiving claims. North Carolina was selected based on its high frequency of tropical storms and flooding incidents, complete coverage of digital flood maps, and variation in community characteristics in special flood hazard areas (SFHA). Much of North Carolina's severe weather comes in the form of large amounts of precipitation and storm surge, rather than damaging winds, which are not covered by NFIP policies. In addition, nearly all of North Carolina's counties (including all of its coastal counties) have digitized flood insurance rate maps (FIRMs), which allows me to identify the flood zone of nearly every property in the state. 
+This research is built upon two primary data sources: flood insurance policies, claims and flood zones from the National Flood Insurance Program, and real estate assessment and transaction records from the Zillow ZTRAX dataset [@ZillowGroup2020]. I focus on North Carolina, which is one of the primary states covered by NFIP policies and receiving claims. North Carolina was selected based on its high frequency of tropical storms and flooding incidents, complete coverage of digital flood maps, and variation in community characteristics in special flood hazard areas (SFHA). Much of North Carolina's severe weather comes in the form of large amounts of precipitation and storm surge, rather than damaging winds, which are not covered by NFIP policies. In addition, nearly all of North Carolina's counties (including all of its coastal counties) have digitized flood insurance rate maps (FIRMs), which allows me to identify the flood zone of nearly every property in the state. North Carolina has a wide variety of flood prone areas, both coastal and inland, covering both high and low income communities, and high and low density areas. Some coastal areas are well adapted to flooding, while other, older communities are much more vulnerable to regular flooding, to the degree that managed retreat has begun to be discussed at the state and local level. While a nationwide analysis would be valuable in the long term, North Carolina provides a reasonable case study for the types of disaster damage most relevant to the National Flood Insurance Program. 
 
 ## Flood Insurance Policies and Claims
 
@@ -82,7 +82,7 @@ ggplot(firststage, aes(x=year, y=polfrac)) + geom_point(aes(color = adapted_text
 
 The [NFIP claims data](https://www.fema.gov/openfema-data-page/fima-nfip-redacted-claims-v1) tabulate every claim filed with the NFIP in the state from `r claims[, min(year(dateOfLoss))]` through `r claims[, max(year(dateOfLoss))]`. The data include details about the insured property, the insurance coverage, the loss event, and subsequent claim and payout. I discard claims that cover only loss of contents (either due to the policyholder not holding any building coverage, or not submitting a claim for building damage), as well as those with listed payouts that exceed the maximum coverage of $250,000. The claims data are used to identify which properties were exposed to flooding in a given year. Since a given property's vulnerability to flood damage is endogenous, through defensive investments, home elevation, etc., I define exposure to flooding by indicating whether a flood claim was filed within the intersection of a census tract and flood zone in each year. One potential issue with using insurance claims data to define flood experiences: it requires at least some homes to hold flood insurance in the exposed area. This connection may result in bias if areas holding fewer insurance policies are then less likely to register a flood event in our data, even if the true incidence of flooding is as high or higher than areas holding more insurance policies. A more comprehensive spatial flooding dataset, such as [NASA's MODIS Global Flood Mapping](https://floodmap.modaps.eosdis.nasa.gov/), could be an improvement in this methodology for future research.
 
-Finally, I also use the [national flood hazard layer](https://www.fema.gov/flood-maps/national-flood-hazard-layer) geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data. The flood zones used in this analysis have at least a 1% chance of flooding in a given year. Homes within a given flood zone generally share a similar base flood elevation, the expected depth of flooding above which new homes are required to be elevated to reduce the risk of property damage.
+Finally, I also use the [national flood hazard layer](https://www.fema.gov/flood-maps/national-flood-hazard-layer) geospatial database to assign individual properties to flood zones, to allow matching with the policies and claims data. Flood zones are defined by the Flood Insurance Rate Maps following a topographic survey, and are categorized based on their probability of flooding, likely flood depth, and susceptibility to other flooding effects like coastal storm surge. The flood zones used in this analysis, defined as Special Flood Hazard Areas, have at least a 1% chance of flooding in a given year. Homes within a given flood zone generally share a similar base flood elevation, the expected depth of flooding above which new homes are required to be elevated to reduce the risk of property damage.
 
 ## Housing Assessment and Transactions
 
@@ -128,6 +128,8 @@ kable(sumstats, digits = 4, caption = "Summary statistics of the analysis panel,
       format.args=list(big.mark = ",", scientific=FALSE, drop0trailing=TRUE))
 ```
 
+One potential issue in my data is that year of construction is not always properly recorded in county records or by the NFIP, adding error to the matching process. This issue is particularly pernicious because a sufficiently comprehensive renovation can result in a much later "effective" year of construction, subjecting a previously old house to new adaptation requirements, and county assessor records may or may not reflect this new construction year. This problem occasionally manifests as some set of matched homes having more insurance policies than homes. In these instances, I drop from the analysis all census tract x flood zone locations that have this problem in any construction year. A more detailed analysis could resolve or more delicately handle this mismatch for future research. 
+
 To inspect the variation of home sales relative to flood events, I run a reduced form regression of transaction probability by years since (or before, for the one year lead) a flood event, controlling for adapted status. The results of this reduced form regression are shown in Table \@ref(tab:reduced-form), and indicate at least some responsiveness to flooding. Potentially concerningly, adapted homes appear to be slightly less likely to be sold when a flood event occurs in the _subsequent_ year, a coefficient one would expect to be 0. This result may point to some unexplained variation in transaction probability driven by trends from observation year or year of home construction that are not captured by the fixed effects. 
 
 ```{r transprob-byflood, echo=FALSE, warning=FALSE, results='asis'}
@@ -156,7 +158,7 @@ stargazer(transprob_flood_dd, transprob_flood_es, type=ifelse(knitr::is_latex_ou
 
 My research question is twofold: first, does experiencing a flood lead homeowners to sell their properties, and second, does holding flood insurance mediate this effect. To explore these questions, I apply a difference-in-differences approach to a linear probability model, regressing an indicator for whether the home is sold within two years of the observation year on whether the home is exposed to flooding, whether the home holds flood insurance (imperfectly matched), and the interaction of the two in a given observation year:
 $$Transaction_{lict} = \alpha Insurance_{lct} + \beta Flood_{lt} + \gamma (Flood_{lt} \times Insurance_{lct}) + \varepsilon_{lict}$$
-The regression also includes fixed effects for location (the intersection of a census tract and a flood zone), year, year of home construction, and whether the home is subject to an adaptation requirement (which is a combination of location and year of construction). The unit of analysis is an individual home in a given year. In the estimating equation, $l$ indexes locations (the intersection of a census tract and a flood zone), $i$ indexes an individual home, $c$ indexes year of construction, and $t$ indexes the year of observation. Together, the subscript $lict$ indexes a single observation. 
+The regression also includes fixed effects for location (the intersection of a census tract and a flood zone), year, year of home construction, and whether the home is subject to an adaptation requirement (which is a combination of location and year of construction). The unit of analysis is an individual home in a given year. In the estimating equation, $l$ indexes locations (the intersection of a census tract and a flood zone), $i$ indexes an individual home, $c$ indexes year of construction, and $t$ indexes the year of observation. Together, the subscript $lict$ indexes a single observation. Note that I do not include any home attributes or other typical hedonic attributes because they will just be absorbed by the fixed effects. 
 
 Since selling a home is often a time consuming process, I look across multiple years to observe a home sale. Because the transaction data ends in 2016, I restrict the sample of years in this regression to 2009–2014, in order to observe two additional years of potential transactions following the final year of observations. This approach is my preferred specification to most effectively detect an effect on home transactions. 
 
